# evaporate

./: .gitattributes  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  build-publish.dockerfile  evaporate.cabal  stack.yaml
app/: Main.hs
example/: evaporate.yaml  stack-template1.json  stack-template2.json
src/: Configuration.hs  Evaporate.hs  ExternalValues.hs  FileSystem.hs  Hash.hs  Logging.hs  S3.hs  STS.hs  Stack.hs  StackDependency.hs  StackParameters.hs  Types.hs  Utils.hs  Zip.hs
test/: ExternalValuesSpec.hs  HashSpec.hs  LoggingSpec.hs  S3Spec.hs  Spec.hs  StackDependencySpec.hs  StackParametersSpec.hs  ZipSpec.hs  acyclic-dependency.yaml  capabilities.yaml  cyclic-dependency.yaml  invalid1.yaml  invalid2.yaml  no-parameters.yaml  no-s3upload.yaml  no-tags.yaml  region.yaml  valid.yaml
